// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BackgroundImage renders nothing when image is loading for the first time 1`] = `null`;

exports[`BackgroundImage renders nothing when image is unavailable 1`] = `null`;

exports[`BackgroundImage renders previous image when image is reloading 1`] = `
<View
  style={Object {}}
>
  <Image
    source={
      Object {
        "uri": "path/to/image",
      }
    }
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        undefined,
        undefined,
        Object {
          "opacity": 0.3333,
          "resizeMode": "cover",
        },
        Object {},
      ]
    }
  />
  <Text>
    Content
  </Text>
</View>
`;

exports[`BackgroundImage renders wihtout content 1`] = `
<View
  style={Object {}}
>
  <Image
    source={
      Object {
        "uri": "path/to/image",
      }
    }
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        undefined,
        undefined,
        Object {
          "opacity": 0.3333,
          "resizeMode": "cover",
        },
        Object {},
      ]
    }
  />
</View>
`;

exports[`BackgroundImage renders with custom styles 1`] = `
<View
  style={
    Object {
      "height": "80%",
    }
  }
>
  <Image
    source={
      Object {
        "uri": "path/to/image",
      }
    }
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        undefined,
        undefined,
        Object {
          "opacity": 0.3333,
          "resizeMode": "cover",
        },
        Object {
          "height": "100%",
          "width": "100%",
        },
      ]
    }
  />
  <Text>
    Content
  </Text>
</View>
`;

exports[`BackgroundImage renders with default styles 1`] = `
<View
  style={Object {}}
>
  <Image
    source={
      Object {
        "uri": "path/to/image",
      }
    }
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        undefined,
        undefined,
        Object {
          "opacity": 0.3333,
          "resizeMode": "cover",
        },
        Object {},
      ]
    }
  />
  <Text>
    Content
  </Text>
</View>
`;
